--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Keerthana Nuti <keerthana.nuti11@gmail.com>, Shashank Aital <aitalsh
 [tool.poetry.dependencies]
 python = "^3.8"
 PyYAML = "^6.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 
