--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,12 @@ PyYAML = "^6.0"
 requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 79
