--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       run: poetry install
       if: steps.cache.outputs.cache-hit != 'true'
     - name: Code Quality
-      run: poetry run black .
+      run: poetry run black . --check
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
