Add seeds and fuzz_prob fields in API configuration

--- a/api_interface/api_configuration/configuration-template.yaml
+++ b/api_interface/api_configuration/configuration-template.yaml
@@ -6,68 +6,16 @@ endpoints:
   endpoint_1:
     path: # Path after base URL
     method: # HTTP Request Method
-    request_headers: 
-      # header_1:
-      # header_2:
+    request_headers: # Dictionary of headers
     payload: # An object
       data_type: # Pythonic data types: list|dict|int|str|bool|None
-      exact: # Boolean value to define if payload must match exactly as configured
+      fuzz_prob: # Floating point value in range [0,1] defining how often to modify value
       payload: # In case of nested data structures like list and dict
+      seeds: # List of seed inputs in case of mutation fuzzer
     responses:
       status: # An integer
         data: # Data expected with current status code
           data_type: # Pythonic data types: list|dict|int|str|bool|None
           exact: # Boolean value to define if payload must match exactly as configured
           payload: # In case of nested data structures like list and dict
-        headers:
-          header_1:
-          header_2:
-
-
-
-# Examples of data objects
-#
-# data_type: dict
-# field:
-#   item_1:
-#     data_type:
-#     exact: 
-#     field:
-#
-# data_type: list
-# field:
-#   data_type:
-#   exact: 
-#   field:
-#
-# data_type: str
-# exact:
-# field:
-#
-# data_type: int
-# exact:
-# field:
-#
-# data_type: bool
-# exact:
-# field:
-#
-#
-#
-# Examples of response objects
-#
-# responses:
-#   200:
-#     data:
-#       data_type:
-#       exact:
-#       payload:
-#     headers:
-#       header_1:
-#   400:
-#     data:
-#       data_type:
-#       exact:
-#       payload:
-#     headers:
-#       header_1:
+        headers: # Dictionary of headers
